<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="40dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <ImageView
            android:contentDescription="@string/imageview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_task"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_gerenciador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_gerenciador_tarefas"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/tv_login"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/tv_senha"
        android:textAlignment="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/tv_criar_conta"/>

</LinearLayout>