<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_conta"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        android:hint="@string/digite_seu_email"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        />

</LinearLayout>